fixed the scrollbars in the summary panel

--- a/gegerator-client/src/app/old-components/summary/summarypanel/summarypanel.component.scss
+++ b/gegerator-client/src/app/old-components/summary/summarypanel/summarypanel.component.scss
@@ -6,10 +6,11 @@
     height: 100%;
     background-color: $tertiary-pane-color;
     display: flex;
-    
+
     .pane{
         display:flex;
         flex-direction: column;
+        height: 100%;
     }
 
 
@@ -19,7 +20,7 @@
         padding: $small-gap 0;
         background-color: $secondary-pane-color;
     }
-    
+
     .pane-content{
         flex: 1;
         background-color: $tertiary-pane-color;
